Update and add files

--- a/Code/DhruvalBhatt_PredictorChallenge_Part2.ipynb
+++ b/Code/DhruvalBhatt_PredictorChallenge_Part2.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Assignment 1: Build a Predictor\n",
-    "## Keertana Chidambaram & Dhruval Bhatt"
+    "## Dhruval Bhatt (Collaborated with Keertana Chidambaram)"
    ]
   },
   {
@@ -30,7 +30,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import math"
+    "import math\n",
+    "import sci"
    ]
   },
   {
@@ -494,8 +495,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### "
+    "### Feature Selection "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
